# auto_jenga

./: .gitignore  Dockerfile  README.md  guide_mode.py  run_docker.sh  terminal_docker.sh
calibration/: aruco.launch  aruco_rt_pose.tf  backward_transform.py  camera_calibration.py  marker_publisher.launch  move_arm.py  utils.py
calibration/calib/: iam-luisa-kinect-transform.tf
src/jenga_packages/: run_guide_mode.py
src/jenga_packages/block_detector/: CMakeLists.txt  README.md  package.xml
src/jenga_packages/block_detector/config/: azure_cam.yaml  azure_easy.yaml  instance_segmentation_params.yaml  ransac_params.yaml  realsense_easy.yaml
src/jenga_packages/block_detector/launch/: azure_camera_calibration.launch  azure_easy_calib.launch  easy_calib.launch  old_azure_camera_calibration.launch  perception.launch  realsense.launch  realsense_easy_calib.launch
src/jenga_packages/block_detector/src/: azure_camera_calibration.py  block_segmenter.py  easy_tf_publisher.py  ransac_block_detector.py  rec_data_old.py  tf_publisher.py  utils.py
src/jenga_packages/block_pose_planner/: CMakeLists.txt  package.xml
src/jenga_packages/block_pose_planner/src/: test_block_move.py
src/jenga_packages/block_pose_planner/srv/: block_pose.srv
src/jenga_packages/dummy_pose_publisher/: CMakeLists.txt  package.xml
src/jenga_packages/dummy_pose_publisher/src/: dummy_pose_publisher.py
src/jenga_packages/frankapy/examples/: run_dynamic_joints.py
src/jenga_packages/fsm_handler/: CMakeLists.txt  package.xml
src/jenga_packages/fsm_handler/launch/: handler.launch
src/jenga_packages/fsm_handler/src/: moveit_block_move.py
src/jenga_packages/jenga_msgs/: CMakeLists.txt  package.xml
src/jenga_packages/jenga_msgs/action/: GetBlocks.action
src/jenga_packages/manipulation/: CMakeLists.txt  package.xml
src/jenga_packages/manipulation/launch/: demo_frankapy.launch
src/jenga_packages/manipulation/src/: demo_moveit.py  robot_joint_converter.py  robot_state_converter.py  test.py  test_moveit.py
src/jenga_packages/move_it_block_pose_planner/: CMakeLists.txt  package.xml
src/jenga_packages/move_it_block_pose_planner/launch/: controller.launch
src/jenga_packages/move_it_block_pose_planner/src/: moveit_block_move.py
src/jenga_packages/move_it_block_pose_planner/srv/: block_pose.srv
src/jenga_packages/moveit_block_pose_planner/: CMakeLists.txt  package.xml
src/jenga_packages/panda_moveit_config/launch/: demo.launch  plan_moveit.launch
src/jenga_packages/perception/: CMakeLists.txt  package.xml
src/jenga_packages/perception/block_detector/config/: ransac_params.yaml
src/jenga_packages/perception/block_detector/launch/: perception.launch
src/jenga_packages/perception/block_detector/scripts/: rec_data_main.py  utils.py
src/jenga_packages/perception/launch/: perception.launch
src/jenga_packages/perception/src/: ransac.py
src/perception/block_detector/scripts/: rec_data_main.py
