<?xml version="1.0"?>
<package format="2">
  <name>jenga_msgs</name>
  <version>0.0.1</version>
  <description>ROS messages and actions for Jenga game</description>
  <maintainer email="vib2810@gmail.com">Jane Doe</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
