<?xml version="1.0"?>
<package format="2">
  <name>moveit_block_pose_planner</name>
  <version>0.0.1</version>
  <description>
    My package description
  </description>

  <maintainer email="dhanvi.sreeni@gmail.com">Dhanvi Sreenivasan</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>jenga_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>jenga_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>