<?xml version="1.0"?>
<package format="2">
  <name>perception</name>
  <version>0.0.1</version>
  <description>
    Jenga Perception
  </description>

  <maintainer email="vib2810@gmail.com">Vibhakar Mohta</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>jenga_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>jenga_msgs</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>